--- a/.github/workflows/firrst-workflow.yaml
+++ b/.github/workflows/firrst-workflow.yaml
@@ -12,4 +12,17 @@ jobs:
               run: |
                 node -v
                 npm -v
-                      
+    parallel-job-macros:
+        runs-on: macros-latest
+        steps:
+            - name: View SW Version
+              run: sw_vers
+    dependant-job:
+        runs-on: windows-latest 
+        needs: run-shell-commands
+        steps:
+            - name: echo a string
+              run: Write-Output "Windows String"
+            - name: Error Step
+              run: doesnotexits
+                         
